--- a/gcfix/t.ipynb
+++ b/gcfix/t.ipynb
@@ -2,20 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a499f1f4",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "id": "b0dcbd2f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "af14e670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs_arr = np.load(\"NA12878.chrom20.ILLUMINA.bwa.CEU.low_coverage.20121211.bam.npy\")\n",
+    "py_arr = np.load(\"NA12878.chrom20.ILLUMINA.bwa.CEU.low_coverage.20121211.bam.py.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "feb7f86b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(79,)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([  9,   9,  49,  49,  49,  49,  89,  89, 129, 129, 129, 129, 129,\n",
+       "        129, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169,\n",
+       "        169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169,\n",
+       "        169, 169, 209, 209, 209, 209, 209, 209, 209, 209, 249, 249, 249,\n",
+       "        249, 249, 249, 249, 249, 249, 249, 289, 289, 289, 289, 289, 289,\n",
+       "        289, 289, 289, 289, 329, 329, 329, 329, 329, 329, 329, 329, 329,\n",
+       "        329]),\n",
+       " array([22, 23, 32, 33, 57, 58, 47, 48, 32, 33, 47, 48, 52, 53, 22, 23, 26,\n",
+       "        27, 32, 33, 35, 36, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 54,\n",
+       "        55, 59, 60, 66, 67, 68, 69, 32, 33, 47, 48, 52, 53, 57, 58, 22, 23,\n",
+       "        32, 33, 47, 48, 52, 53, 57, 58, 22, 23, 32, 33, 47, 48, 52, 53, 57,\n",
+       "        58, 22, 23, 32, 33, 47, 48, 52, 53, 57, 58]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.where(rs_arr != py_arr)\n",
+    "display(d[0].shape)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1ed3edc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([  1,   0,   2,   0,   0,   1,   1,   3,   2,   5,   1,   2,   3,\n",
+       "          2,   1,   0,   2,   1,   2,   0,   2,   7,   8,   0,   2,   5,\n",
+       "          0,   2,   1,   3,   1,   8,   0,   3,   0,   0,   1,   1,   0,\n",
+       "          1,   0,   9,   3,   8,  10,  13,   7,   2,   3,   1,   1,  28,\n",
+       "         24,  35,  41,  42,  19,   8,  11,   2,   3, 204, 144, 220, 312,\n",
+       "        232, 133,  72,  64,   8,  12, 359, 334, 559, 718, 491, 262, 104,\n",
+       "        135], dtype=uint64),\n",
+       " array([  0.,   1.,   0.,   2.,   1.,   0.,   4.,   0.,   1.,   6.,   2.,\n",
+       "          1.,   1.,   4.,   0.,   1.,   0.,   3.,   1.,   1.,   5.,   4.,\n",
+       "          5.,   3.,   3.,   2.,   2.,   1.,   3.,   2.,   3.,   3.,   3.,\n",
+       "          1.,   2.,   1.,   0.,   0.,   1.,   0.,   1.,   7.,   5.,  12.,\n",
+       "          6.,   9.,  11.,   4.,   1.,   0.,   2.,  18.,  34.,  56.,  20.,\n",
+       "         29.,  32.,  11.,   8.,   1.,   4., 153., 195., 303., 229., 182.,\n",
+       "        183.,  90.,  46.,   6.,  14., 266., 427., 733., 544., 380., 373.,\n",
+       "        134., 105.]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_arr[d], py_arr[d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "484daaa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([  1,   0,   2,   0,   0,   1,   1,   3,   2,   5,   1,   2,   3,\n",
+       "          2,   1,   0,   2,   1,   2,   0,   2,   7,   8,   0,   2,   5,\n",
+       "          0,   2,   1,   3,   1,   8,   0,   3,   0,   0,   1,   1,   0,\n",
+       "          1,   0,   9,   3,   8,  10,  13,   7,   2,   3,   1,   1,  28,\n",
+       "         24,  35,  41,  42,  19,   8,  11,   2,   3, 204, 144, 220, 312,\n",
+       "        232, 133,  72,  64,   8,  12, 359, 334, 559, 718, 491, 262, 104,\n",
+       "        135], dtype=uint64),\n",
+       " array([  0.,   1.,   0.,   2.,   1.,   0.,   4.,   0.,   1.,   6.,   2.,\n",
+       "          1.,   1.,   4.,   0.,   1.,   0.,   3.,   1.,   1.,   5.,   4.,\n",
+       "          5.,   3.,   3.,   2.,   2.,   1.,   3.,   2.,   3.,   3.,   3.,\n",
+       "          1.,   2.,   1.,   0.,   0.,   1.,   0.,   1.,   7.,   5.,  12.,\n",
+       "          6.,   9.,  11.,   4.,   1.,   0.,   2.,  18.,  34.,  56.,  20.,\n",
+       "         29.,  32.,  11.,   8.,   1.,   4., 153., 195., 303., 229., 182.,\n",
+       "        183.,  90.,  46.,   6.,  14., 266., 427., 733., 544., 380., 373.,\n",
+       "        134., 105.]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_arr[d], py_arr[d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b68f3564",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24893917963224893"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "88 / (350*101) * 100"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "gcfix",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
