--- a/gcfix/t.ipynb
+++ b/gcfix/t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b0dcbd2f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/plain": [
-       "(79,)"
+       "(88,)"
       ]
      },
      "metadata": {},
@@ -39,18 +39,19 @@
     {
      "data": {
       "text/plain": [
-       "(array([  9,   9,  49,  49,  49,  49,  89,  89, 129, 129, 129, 129, 129,\n",
-       "        129, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169,\n",
-       "        169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169, 169,\n",
-       "        169, 169, 209, 209, 209, 209, 209, 209, 209, 209, 249, 249, 249,\n",
-       "        249, 249, 249, 249, 249, 249, 249, 289, 289, 289, 289, 289, 289,\n",
-       "        289, 289, 289, 289, 329, 329, 329, 329, 329, 329, 329, 329, 329,\n",
-       "        329]),\n",
-       " array([22, 23, 32, 33, 57, 58, 47, 48, 32, 33, 47, 48, 52, 53, 22, 23, 26,\n",
-       "        27, 32, 33, 35, 36, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 54,\n",
-       "        55, 59, 60, 66, 67, 68, 69, 32, 33, 47, 48, 52, 53, 57, 58, 22, 23,\n",
-       "        32, 33, 47, 48, 52, 53, 57, 58, 22, 23, 32, 33, 47, 48, 52, 53, 57,\n",
-       "        58, 22, 23, 32, 33, 47, 48, 52, 53, 57, 58]))"
+       "(array([ 17,  17,  49,  49,  49,  49,  57,  57,  89,  89,  89,  89, 129,\n",
+       "        129, 129, 129, 161, 161, 169, 169, 169, 169, 169, 169, 169, 169,\n",
+       "        169, 169, 169, 169, 169, 169, 193, 193, 209, 209, 209, 209, 209,\n",
+       "        209, 233, 233, 241, 241, 249, 249, 249, 249, 249, 249, 257, 257,\n",
+       "        265, 265, 273, 273, 281, 281, 289, 289, 289, 289, 289, 289, 289,\n",
+       "        289, 297, 297, 305, 305, 313, 313, 313, 313, 321, 321, 329, 329,\n",
+       "        329, 329, 329, 329, 329, 329, 337, 337, 345, 345]),\n",
+       " array([62, 63, 42, 43, 62, 63, 62, 63, 42, 43, 47, 48, 42, 43, 47, 48, 62,\n",
+       "        63, 30, 31, 34, 35, 36, 37, 42, 43, 44, 47, 49, 50, 59, 60, 62, 63,\n",
+       "        42, 43, 47, 48, 62, 63, 62, 63, 62, 63, 42, 43, 47, 48, 62, 63, 62,\n",
+       "        63, 62, 63, 62, 63, 62, 63, 42, 43, 47, 48, 62, 63, 72, 73, 62, 63,\n",
+       "        62, 63, 12, 13, 62, 63, 62, 63, 42, 43, 47, 48, 62, 63, 72, 73, 62,\n",
+       "        63, 62, 63]))"
       ]
      },
      "execution_count": 8,
@@ -66,38 +67,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "1ed3edc6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([  1,   0,   2,   0,   0,   1,   1,   3,   2,   5,   1,   2,   3,\n",
-       "          2,   1,   0,   2,   1,   2,   0,   2,   7,   8,   0,   2,   5,\n",
-       "          0,   2,   1,   3,   1,   8,   0,   3,   0,   0,   1,   1,   0,\n",
-       "          1,   0,   9,   3,   8,  10,  13,   7,   2,   3,   1,   1,  28,\n",
-       "         24,  35,  41,  42,  19,   8,  11,   2,   3, 204, 144, 220, 312,\n",
-       "        232, 133,  72,  64,   8,  12, 359, 334, 559, 718, 491, 262, 104,\n",
-       "        135], dtype=uint64),\n",
-       " array([  0.,   1.,   0.,   2.,   1.,   0.,   4.,   0.,   1.,   6.,   2.,\n",
-       "          1.,   1.,   4.,   0.,   1.,   0.,   3.,   1.,   1.,   5.,   4.,\n",
-       "          5.,   3.,   3.,   2.,   2.,   1.,   3.,   2.,   3.,   3.,   3.,\n",
-       "          1.,   2.,   1.,   0.,   0.,   1.,   0.,   1.,   7.,   5.,  12.,\n",
-       "          6.,   9.,  11.,   4.,   1.,   0.,   2.,  18.,  34.,  56.,  20.,\n",
-       "         29.,  32.,  11.,   8.,   1.,   4., 153., 195., 303., 229., 182.,\n",
-       "        183.,  90.,  46.,   6.,  14., 266., 427., 733., 544., 380., 373.,\n",
-       "        134., 105.]))"
+       "array([   1.,   -1.,    2.,   -2.,   -1.,    1.,   -3.,    3.,    1.,\n",
+       "         -1.,   -1.,    1.,    2.,   -2.,    1.,   -1.,    2.,   -2.,\n",
+       "          1.,   -1.,   -3.,    3.,    3.,   -3.,   -1.,    3.,   -2.,\n",
+       "          1.,   -2.,    1.,   -2.,    5.,   -3.,    2.,   -2.,   -1.,\n",
+       "          1.,    1.,   -1.,    1.,   -1.,    2.,   -2.,   -4.,    4.,\n",
+       "          4.,   -4.,   -2.,    2.,    1.,   -1.,   10.,  -10.,  -21.,\n",
+       "         21.,   13.,  -13.,   -3.,    3.,    1.,   -1.,   51.,  -51.,\n",
+       "        -83.,   83.,   50.,  -50.,  -18.,   18.,    2.,   -2.,   93.,\n",
+       "        -93., -174.,  174.,  111., -111.,  -30.,   30.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rs_arr[d], py_arr[d]"
+    "rs_arr[d] - py_arr[d]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aa627d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
